Change out template

--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,8 +1,21 @@
 /*
-	Formula by Pixelarity
+	Optics by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
+
+/* Basic */
+
+	object {
+		display: none;
+	}
+
+/* List */
+
+	ul.icons.major > li > .icon {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+	}
 
 /* Button */
 
@@ -11,19 +24,28 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px #eaeaea;
+		border: solid 2px;
 	}
-
-		input[type="submit"].special,
-		input[type="reset"].special,
-		input[type="button"].special,
-		button.special,
-		.button.special {
-			border: 0;
-		}
 
 /* Banner */
 
-	#banner:before {
-		display: none;
+	#banner {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
+
+/* Main */
+
+	#main > header {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+/* Nav */
+
+	#nav > ul.links > li {
+		border-top: solid 1px;
+		line-height: 3.5em;
+	}
+
+		#nav > ul.links > li:first-child {
+			border-top: 0;
+		}
