--- a/assets/sass/components/_spotlight.scss
+++ b/assets/sass/components/_spotlight.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,104 +11,59 @@
 /* Spotlight */
 
 	.spotlight {
-		$main-pad: _size(main-pad);
-
-		@include vendor('display', 'flex');
 		@include vendor('align-items', 'center');
+		@include vendor('display', 'flex');
+		@include vendor('justify-content', 'space-between');
 
-		.content {
-			@include vendor('flex', '1');
+		.image, article, object {
+			width: 45%
 		}
 
-		.image {
-			@include vendor('transition', 'top #{_duration(spotlight)} ease');
-			display: block;
-			border-radius: 0.5em;
-			margin: ($main-pad * -1) 0 _size(element-margin) (_size(element-margin) * 2);
-			top: $main-pad;
-
-			&:before {
-				content: '';
-				display: block;
-				border-radius: 0.5em 0.5em 0 0;
-				border: solid 2px;
-				border-bottom: 0;
-				height: 3em;
-			}
-
-			&:after {
-				content: '';
-				display: block;
-				position: absolute;
-				border-radius: 0.5em;
-				height: 0.25em;
-				left: 50%;
-				margin-left: -1.5em;
-				top: 1.5em;
-				width: 3em;
-			}
-
-			img {
-				@include vendor('transition', 'opacity 1s ease');
-				@include vendor('transition-delay', '0.75s');
-				border-radius: 0;
-				width: 16em;
-				height: 17em;
-			}
+		object {
+			margin-bottom: _size(element-margin);
 		}
 
-		&.alt {
+		&.left {
+			@include vendor('flex-direction', 'row');
+		}
+
+		&.right {
 			@include vendor('flex-direction', 'row-reverse');
-
-			.image {
-				margin-left: 0;
-				margin-right: (_size(element-margin) * 2);
-			}
 		}
 
-		&.inactive {
-			.image {
-				top: $main-pad * 2;
+		@include breakpoint(medium) {
+			@include vendor('flex-direction', 'row');
+			@include vendor('flex-wrap', 'wrap');
+			@include vendor('justify-content', 'center');
 
-				img {
-					opacity: 0;
+			.image, object {
+				width: 80%;
+			}
+
+			article {
+				text-align: center;
+				width: 100%;
+
+				ul {
+					&.checklist {
+						display: inline-block;
+						text-align: left;
+					}
 				}
 			}
 		}
 
 		@include breakpoint(small) {
-			$main-pad: _size(main-pad) * 0.75;
 
-			@include vendor('flex-direction', 'column !important');
+			.image {
+				width: auto;
+			}
+		}
 
-			.content {
-				text-align: center;
-				-ms-flex: 0 1 auto;
+		@include breakpoint(xsmall) {
+
+			object {
 				width: 100%;
 			}
-
-			.image {
-				margin: ($main-pad * -1) auto _size(element-margin) auto !important;
-				top: $main-pad;
-			}
 		}
 	}
-
-	@mixin color-spotlight($p: null) {
-		.spotlight {
-			.image {
-				background-color: _palette($p, border);
-
-				&:before {
-					border-color: _palette($p, border);
-					background-color: _palette($p, bg);
-				}
-
-				&:after {
-					background-color: _palette($p, border);
-				}
-			}
-		}
-	}
-
-	@include color-spotlight;
