--- a/assets/sass/components/_table.scss
+++ b/assets/sass/components/_table.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -17,7 +21,8 @@
 
 		tbody {
 			tr {
-				border: solid _size(border-width);
+				border-style: solid;
+				border-width: _size(border-width);
 				border-left: 0;
 				border-right: 0;
 			}
@@ -35,11 +40,13 @@
 		}
 
 		thead {
-			border-bottom: solid (_size(border-width) * 2);
+			border-bottom-style: solid;
+			border-bottom-width: (_size(border-width) * 2);
 		}
 
 		tfoot {
-			border-top: solid (_size(border-width) * 2);
+			border-top-style: solid;
+			border-top-width: (_size(border-width) * 2);
 		}
 
 		&.alt {
@@ -48,7 +55,8 @@
 			tbody {
 				tr {
 					td {
-						border: solid _size(border-width);
+						border-style: solid;
+						border-width: _size(border-width);
 						border-left-width: 0;
 						border-top-width: 0;
 
@@ -77,6 +85,7 @@
 
 	@mixin color-table($p: null) {
 		table {
+
 			tbody {
 				tr {
 					border-color: _palette($p, border);
@@ -100,6 +109,7 @@
 			}
 
 			&.alt {
+
 				tbody {
 					tr {
 						td {
