--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,10 +4,31 @@
 @import 'libs/skel';
 
 /*
-	Formula by Pixelarity
+	Optics by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
+
+/* Basic */
+
+	object {
+		display: none;
+	}
+
+/* List */
+
+	ul {
+		&.icons {
+			&.major {
+				> li {
+					> .icon {
+						position: relative;
+						-ms-behavior: url('assets/js/ie/PIE.htc');
+					}
+				}
+			}
+		}
+	}
 
 /* Button */
 
@@ -16,17 +37,36 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px _palette(border);
-
-		&.special {
-			border: 0;
-		}
+		border: solid (_size(border-width) * 2);
 	}
 
 /* Banner */
 
 	#banner {
-		&:before {
-			display: none;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+	}
+
+/* Main */
+
+	#main {
+		> header {
+			-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		}
+	}
+
+/* Nav */
+
+	#nav {
+		> ul {
+			&.links {
+				> li {
+					border-top: solid 1px;
+					line-height: 3.5em;
+
+					&:first-child {
+						border-top: 0;
+					}
+				}
+			}
 		}
 	}
