--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -7,29 +11,40 @@
 /* Footer */
 
 	#footer {
-		$main-pad: _size(main-pad);
-
-		@include padding($main-pad, 0);
-		background-color: _palette(bg-alt);
-		text-align: center;
-
-		> .inner {
-			margin: 0 auto;
-			max-width: calc(100% - 4em);
-			width: _size(inner-width);
-		}
+		@include color-typography(accent3);
+		padding: 4em 0;
 
 		.copyright {
-			color: _palette(fg-light);
-			font-size: 0.8em;
+			color: _palette(accent3, fg-light);
+			margin: 0 0 _size(element-margin) 0;
+			padding: 0;
+			text-align: center;
+
+			li {
+				border-left: solid _size(border-width) _palette(accent3, border);
+				display: inline-block;
+				list-style: none;
+				margin-left: 1.5em;
+				padding-left: 1.5em;
+
+				&:first-child {
+					border-left: 0;
+					margin-left: 0;
+					padding-left: 0;
+				}
+			}
 		}
 
 		@include breakpoint(small) {
-			$main-pad: _size(main-pad) * 0.75;
+			@include padding(3em, 0);
 
-			@include padding($main-pad, 0);
-		}
-
-		@include breakpoint(xsmall) {
+			.copyright {
+				li {
+					display: block;
+					border-left: 0;
+					margin-left: 0;
+					padding-left: 0;
+				}
+			}
 		}
 	}
