--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -24,7 +28,6 @@
 		}
 
 	body {
-		background: _palette(bg);
 
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
