--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,27 +1,50 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
 
 /* Type */
 
+	html, body {
+		background: _palette(bg-alt);
+	}
+
+	#page-wrapper {
+		background: _palette(bg);
+	}
+
 	body {
-		background-color: _palette(invert, bg);
-		color: _palette(fg);
+		color: _palette(fg-bold);
 	}
 
 	body, input, select, textarea {
 		font-family: _font(family);
-		font-size: 16pt;
+		font-size: 13pt;
 		font-weight: _font(weight);
-		line-height: 1.65;
+		line-height: 1.9em;
 
 		@include breakpoint(xlarge) {
-			font-size: 13pt;
+			font-size: 12pt;
 		}
 
 		@include breakpoint(large) {
+			font-size: 11pt;
+		}
+
+		@include breakpoint(medium) {
+			font-size: 12pt;
+		}
+
+		@include breakpoint(small) {
+			font-size: 12pt;
+		}
+
+		@include breakpoint(xsmall) {
 			font-size: 12pt;
 		}
 
@@ -31,16 +54,10 @@
 	}
 
 	a {
-		@include vendor('transition', (
-			'color #{_duration(transition)} ease-in-out',
-			'border-bottom-color #{_duration(transition)} ease-in-out',
-		));
-		color: inherit;
-		text-decoration: none;
-		border-bottom: dotted 1px;
+		text-decoration: underline;
 
 		&:hover {
-			border-bottom-color: transparent;
+			text-decoration: none;
 		}
 	}
 
@@ -57,11 +74,11 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: _font(weight-bold);
-		line-height: 1.5;
+		font-family: _font(family-header);
+		font-weight: _font(weight-header);
+		letter-spacing: _font(letter-spacing);
+		line-height: 1em;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		font-weight: _font(weight-bold);
-		letter-spacing: _font(kerning);
 		text-transform: uppercase;
 
 		a {
@@ -70,39 +87,42 @@
 		}
 	}
 
-	h1, h2 {
-		font-family: _font(family-heading);
-		font-weight: _font(weight-heading);
-		letter-spacing: _font(kerning-heading);
-	}
-
-	h1 {
-		font-size: 2.5em;
-	}
-
 	h2 {
-		font-size: 1.25em;
+		font-size: 1.75em;
+		line-height: 1.5em;
 	}
 
 	h3 {
-		font-size: 0.8em;
+		font-size: 1.35em;
+		line-height: 1.5em;
 	}
 
 	h4 {
-		font-size: 0.6em;
+		font-size: 1.1em;
+		line-height: 1.5em;
 	}
 
 	h5 {
-		font-size: 0.6em;
+		font-size: 0.9em;
+		line-height: 1.5em;
 	}
 
 	h6 {
-		font-size: 0.6em;
+		font-size: 0.7em;
+		line-height: 1.5em;
 	}
 
 	@include breakpoint(small) {
-		h1 {
+		h2 {
 			font-size: 1.5em;
+		}
+
+		h3 {
+			font-size: 1.25em;
+		}
+
+		h4 {
+			font-size: 1em;
 		}
 	}
 
@@ -119,7 +139,8 @@
 	}
 
 	blockquote {
-		border-left: solid (_size(border-width) * 4);
+		border-left-style: solid;
+		border-left-width: (_size(border-width) * 4);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
@@ -127,7 +148,8 @@
 
 	code {
 		border-radius: _size(border-radius);
-		border: solid _size(border-width);
+		border-style: solid;
+		border-width: _size(border-width);
 		font-family: _font(family-fixed);
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -142,7 +164,7 @@
 
 		code {
 			display: block;
-			line-height: 1.75;
+			line-height: 1.75em;
 			padding: 1em 1.5em;
 			overflow-x: auto;
 		}
@@ -150,11 +172,12 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid _size(border-width);
-		margin: _size(element-margin) 0;
+		border-bottom-style: solid;
+		border-bottom-width: _size(border-width);
+		margin: (_size(element-margin) * 1.5) 0;
 
 		&.major {
-			margin: (_size(element-margin) * 1.5) 0;
+			margin: (_size(element-margin) * 2) 0;
 		}
 	}
 
@@ -171,11 +194,9 @@
 	}
 
 	@mixin color-typography($p: null) {
-		$highlight: _palette($p, highlight);
-
 		@if $p != null {
 			background-color: _palette($p, bg);
-			color: _palette($p, fg);
+			color: _palette($p, fg-bold);
 		}
 
 		input, select, textarea {
@@ -183,14 +204,7 @@
 		}
 
 		a {
-			&:hover {
-				@if $p == $highlight {
-					color: _palette($p, fg-bold) !important;
-				}
-				@else {
-					color: _palette(accent1, bg) !important;
-				}
-			}
+			color: _palette($p, highlight);
 		}
 
 		strong, b {
