--- a/assets/sass/components/_box.scss
+++ b/assets/sass/components/_box.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -8,7 +12,7 @@
 
 	.box {
 		border-radius: _size(border-radius);
-		border: solid _size(border-width);
+		border: solid _size(border-width) _palette(border);
 		margin-bottom: _size(element-margin);
 		padding: 1.5em;
 
@@ -24,11 +28,3 @@
 			padding: 0;
 		}
 	}
-
-	@mixin color-box($p: null) {
- 		.box {
- 			border-color: _palette($p, border);
- 		}
-	}
-
-	@include color-box;
