--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -12,21 +16,18 @@
 	button,
 	.button {
 		@include vendor('appearance', 'none');
-		@include vendor('transition', (
-			'background-color #{_duration(transition)} ease-in-out',
-			'color #{_duration(transition)} ease-in-out',
-			'box-shadow #{_duration(transition)} ease-in-out',
-		));
+		@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
 		border-radius: _size(border-radius);
 		border: 0;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.8em;
-		font-weight: _font(weight-bold);
-		height: 3.5em;
-		letter-spacing: _font(kerning);
-		line-height: 3.5em;
-		padding: 0 2em;
+		font-family: _font(family-header);
+		font-size: 0.9em;
+		font-weight: _font(weight-header-bold);
+		height: 3.7em;
+		letter-spacing: _font(letter-spacing);
+		line-height: 3.85em;
+		padding: 0 3.5em;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -45,25 +46,25 @@
 		}
 
 		&.small {
-			font-size: 0.6em;
+			font-size: 0.7em;
 		}
 
 		&.big {
-			min-width: 19em;
-			height: 3.75em;
-			line-height: 3.75em;
+			font-size: 1.35em;
 		}
 
 		&.disabled,
 		&:disabled {
-			@include vendor('pointer-events', 'none');
+			cursor: default;
 			opacity: 0.25;
+		}
+
+		@include breakpoint(xsmall) {
+			padding: 0;
 		}
 	}
 
 	@mixin color-button($p: null) {
-		$highlight: _palette($p, highlight);
-
 		input[type="submit"],
 		input[type="reset"],
 		input[type="button"],
@@ -73,62 +74,51 @@
 			box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette($p, border);
 			color: _palette($p, fg-bold) !important;
 
-			@if ($p == $highlight) {
-				&:hover {
-					color: _palette($p, fg-bold) !important;
-					background-color: _palette($p, border-bg);
-				}
-
-				&:active {
-					color: _palette($p, fg-bold) !important;
-					background-color: _palette($p, border2-bg);
+			&.icon {
+				&:before {
+					color: _palette($p, fg-light);
 				}
 			}
-			@else {
-				&:hover {
-					box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette($highlight, bg);
-					color: _palette($highlight, bg) !important;
-				}
 
-				&:active {
-					box-shadow: inset 0 0 0 (_size(border-width) * 2) _palette($highlight, bg);
-					color: _palette($highlight, bg) !important;
-					background-color: transparentize(_palette($highlight, bg), 0.75);
-				}
+			&:hover {
+				background-color: _palette($p, border-bg);
+			}
+
+			&:active {
+				background-color: _palette($p, border2-bg);
 			}
 
 			&.special {
+				background-color: _palette($p, highlight);
 				box-shadow: none;
+				color: _palette($p, bg) !important;
 
-				@if ($p == $highlight) {
-					background-color: _palette($p, fg-bold);
-					color: _palette($p, bg) !important;
+				&:hover {
+					background-color: lighten(_palette($p, highlight), 5);
+				}
 
-					@if ($p == 'invert') {
-						&:hover {
-							background-color: darken(_palette(accent1, bg), 5);
-							color: _palette(accent1, fg-bold) !important;
-						}
+				&:active {
+					background-color: darken(_palette($p, highlight), 5);
+				}
 
-						&:active {
-							background-color: darken(_palette(accent1, bg), 15);
-							color: _palette(accent1, fg-bold) !important;
-						}
+				&.icon {
+					&:before {
+						color: _palette($p, bg);
 					}
 				}
-				@else {
-					background-color: _palette($highlight, bg);
-					color: _palette($highlight, fg-bold) !important;
+			}
 
-					&:hover {
-						background-color: darken(_palette($highlight, bg), 5);
-						color: _palette($highlight, fg-bold) !important;
-					}
+			&.alt {
+				background-color: _palette($p, fg-bold);
+				box-shadow: none;
+				color: _palette($p, bg) !important;
 
-					&:active {
-						background-color: darken(_palette($highlight, bg), 15);
-						color: _palette($highlight, fg-bold) !important;
-					}
+				&:hover {
+					background-color: lighten(_palette($p, fg-bold), 5);
+				}
+
+				&:active {
+					background-color: darken(_palette($p, fg-bold), 5);
 				}
 			}
 		}
