--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -28,13 +32,13 @@
 
 		&.left {
 			float: left;
-			margin: 0 1.5em 1em 0;
+			padding: 0 1.5em 1em 0;
 			top: 0.25em;
 		}
 
 		&.right {
 			float: right;
-			margin: 0 0 1em 1.5em;
+			padding: 0 0 1em 1.5em;
 			top: 0.25em;
 		}
 
@@ -55,10 +59,6 @@
 
 			img {
 				width: 100%;
-			}
-
-			@include breakpoint(small) {
-				margin: 0 0 _size(element-margin) 0;
 			}
 		}
 	}
