--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -1,53 +1,91 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
 
 /* Section/Article */
 
-	section, article {
+	section, article, header {
 		&.special {
 			text-align: center;
 		}
+	}
 
-		header {
-			margin: 0 0 _size(element-margin) 0;
+	header {
+		p {
+			position: relative;
+			margin: 0 0 (_size(element-margin) * 0.75) 0;
+		}
 
-			> :first-child {
-				display: inline-block;
-				border-bottom: solid 2px;
-				margin-bottom: 0.5em;
-				padding-bottom: 0.5em;
-			}
+		h2 + p {
+			font-size: 1.25em;
+			margin-top: (_size(element-margin) * -0.4);
+		}
 
-			> :last-child {
-				margin-bottom: 0;
-			}
+		h3 + p {
+			font-size: 1.1em;
+			margin-top: (_size(element-margin) * -0.3);
+		}
 
+		h4 + p,
+		h5 + p,
+		h6 + p {
+			font-size: 0.9em;
+			margin-top: (_size(element-margin) * -0.15);
+		}
+
+		small {
+			display: block;
+			font-size: 0.85em;
+			font-family: _font(family-header);
+			font-weight: _font(weight-header-bold);
+			letter-spacing: _font(letter-spacing);
+			margin-bottom: 0.3em;
+			text-transform: uppercase;
+		}
+
+		&.major {
+			margin-bottom: (_size(element-margin) * 3);
+		}
+
+		&.narrow {
+			width: 60%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		@include breakpoint(medium) {
 			&.major {
-				margin: 0 0 (_size(element-margin) * 1.5) 0;
-				text-align: center;
+				margin-bottom: (_size(element-margin) * 2.5);
+			}
+
+			&.narrow {
+				width: auto;
 			}
 		}
 
 		@include breakpoint(small) {
-			header {
-				&.major {
-					margin: 0 0 _size(element-margin) 0;
-				}
+			h2 + p {
+				font-size: 1em;
+			}
+
+			h3 + p {
+				font-size: 1em;
+			}
+
+			&.major {
+				margin-bottom: (_size(element-margin) * 1.5);
+			}
+		}
+
+		@include breakpoint(xsmall) {
+			&.major {
+				margin-bottom: _size(element-margin);
 			}
 		}
 	}
-
-	@mixin color-section($p: null) {
-		section, article {
-			header {
-				> :first-child {
-					border-bottom-color: _palette($p, border);
-				}
-			}
-		}
-	}
-
-	@include color-section;
