--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,68 +4,121 @@
 @import 'libs/skel';
 
 /*
-	Formula by Pixelarity
+	Optics by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
 
-/* Spotlight */
+/* Icon */
 
-	.spotlight {
-		&:after {
-			content: '';
-			display: block;
-			clear: both;
+	.icon {
+		&.alt {
+			&:before {
+				color: inherit !important;
+			}
+		}
+	}
+
+/* List */
+
+	ul {
+		&.icons {
+			&.major {
+				text-align: center;
+
+				> li {
+					display: inline-block;
+					width: 33%;
+
+					> .icon {
+						display: inline-block;
+					}
+				}
+			}
 		}
 
-		.content {
-			float: left;
-			width: 60%;
-		}
-
-		.image {
-			float: left;
-			margin-right: 0 !important;
-			margin-left: (_size(element-margin) * 2) !important;
+		&.labeled-icons {
+			> li {
+				display: inline-block;
+			}
 		}
 	}
 
 /* Features */
 
 	.features {
+		ul, object, .image {
+			display: inline-block;
+			width: 33%;
+			vertical-align: top;
+		}
+	}
+
+/* Spotlight */
+
+	.spotlight {
+		.image, article, object {
+			float: left;
+			margin: 0 (_size(element-margin) * 1.5) 0 0;
+		}
+
 		&:after {
 			content: '';
 			display: block;
 			clear: both;
-		}
-
-		> * {
-			float: left;
-		}
-	}
-
-/* Header */
-
-	#header {
-		.logo {
-			position: absolute;
-			top: 0;
-			left: 1.5em;
-		}
-
-		nav {
-			position: absolute;
-			top: 0;
-			right: 0;
 		}
 	}
 
 /* Banner */
 
 	#banner {
-		min-height: 0;
+		background-image: url('../../images/banner.jpg');
+		background-size: cover;
+		background-repeat: no-repeat;
 
-		.more {
-			display: none;
+		&:after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			background-color: transparent;
+			background-image: url('images/ie/overlay.png');
+			background-repeat: repeat-x;
+			background-size: auto 100%;
+			opacity: 1;
+		}
+	}
+
+/* Main */
+
+	#main {
+		> header {
+			position: relative;
+			background-image: url('../../images/banner.jpg');
+			background-size: cover;
+			background-repeat: no-repeat;
+
+			&:after {
+				content: '';
+				display: block;
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				left: 0;
+				top: 0;
+				background-color: transparent;
+				background-image: url('images/ie/overlay.png');
+				background-repeat: repeat-x;
+				background-size: auto 100%;
+				opacity: 1;
+			}
+
+			> * {
+				position: relative;
+				z-index: 1;
+			}
 		}
 	}
