--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,167 +1,143 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Formula by Pixelarity
+/// Optics by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
 
 /* Header */
 
-	#page-wrapper {
-		position: relative;
+	body {
 		padding-top: 3.5em;
 
-		@include breakpoint(small) {
-			padding-top: 2.75em;
+		&.landing {
+			padding-top: 0;
+		}
+
+		@include breakpoint(medium) {
+			padding-top: 44px;
 		}
 	}
 
 	#header {
-		@include vendor('display', 'flex');
-		@include vendor('justify-content', 'space-between');
-		@include vendor('align-items', 'center');
-		@include vendor('transition', (
-			'border-bottom-color #{_duration(transition)} ease',
-			'color #{_duration(transition)} ease',
-			'background-color #{_duration(transition)} ease'
-		));
-		border-bottom: solid 2px _palette(border);
-		background: _palette(bg);
+		@include vendor('transition', 'background-color #{_duration(transition) * 3} ease-in-out');
+		background-color: darken(_palette(accent2, bg), 12);
+		background-color: transparentize(darken(_palette(accent2, bg), 12), 0.025);
+		color: _palette(accent2, fg);
+		cursor: default;
+		font-weight: _font(weight-bold);
 		height: 3.5em;
 		left: 0;
-		line-height: 3.5em;
-		padding: 0 0 0 1.5em;
+		line-height: 3.65em;
 		position: fixed;
+		text-align: right;
+		text-transform: uppercase;
 		top: 0;
 		width: 100%;
-		z-index: _misc(z-index-base);
+		z-index: _misc(z-index-base) + 1;
 
-		a {
-			color: inherit;
-			font-size: 0.8em;
-			font-weight: _font(weight-bold);
-			letter-spacing: _font(kerning);
-			text-transform: uppercase;
-			border: 0;
-		}
-
-		.logo {
-			display: block;
+		> h1 {
+			@include vendor('transition', 'color #{_duration(transition)} ease-in-out');
+			color: _palette(accent2, fg-bold);
+			display: inline-block;
+			font-weight: _font(weight-extra-bold);
 			height: inherit;
+			left: 0;
 			line-height: inherit;
+			margin: 0 0 0 1.5em;
+			padding: 0;
+			position: absolute;
+			top: 0;
+
+			a {
+				padding: 0 !important;
+				font-weight: inherit;
+			}
 
 			span {
-				font-weight: _font(weight);
+				font-weight: _font(weight-bold);
 			}
 		}
 
-		nav {
-			ul {
-				list-style: none;
-				margin: 0;
-				padding: 0;
+		a {
+			@include vendor('transition', 'color #{_duration(transition)} ease-in-out');
+			color: inherit;
+			display: inline-block;
+			text-decoration: none;
+			font-weight: _font(weight-bold);
+			letter-spacing: _font(letter-spacing);
 
-				li {
-					display: inline-block;
-					padding: 0;
+			&:hover {
+				color: _palette(accent2, fg-bold);
+			}
 
-					a {
-						display: inline-block;
-						padding: 0 1.5em 0 1.5em;
-						position: relative;
+			&[href="#nav"] {
+				@include icon;
+				-webkit-tap-highlight-color: rgba(0,0,0,0);
+				padding: 0 0.75em 0;
 
-						&[href="#menu"] {
-							padding-right: 3em;
-
-							&:before {
-								content: '';
-								background-image: url('images/menu.svg');
-								background-position: center;
-								background-repeat: no-repeat;
-								display: block;
-								height: 100%;
-								position: absolute;
-								right: 1.5em;
-								text-align: center;
-								top: 0;
-								width: 1em;
-							}
-						}
-					}
+				&:before {
+					content: '\f0c9';
+					margin: 0 0.5em 0 0;
 				}
+			}
+
+			&:last-child {
+				padding-right: 1.5em;
 			}
 		}
 
 		&.alt {
+			position: fixed;
 			background-color: transparent;
-			border-bottom-color: transparent;
-			color: _palette(invert, fg-bold);
+			color: #95accf;
 
-			nav {
-				ul {
-					li {
-						a {
-							&[href="#menu"] {
-								&:before {
-									background-image: url('images/menu-alt.svg');
-								}
-							}
-						}
-					}
-				}
+			> h1 {
+				color: inherit;
 			}
 		}
 
-		&.with-banner {
-			& + #banner {
-				margin-top: -3.5em;
+		@include breakpoint(medium) {
+			a {
+				&[href="#nav"] {
+					> span {
+						display: none;
+					}
+
+					&:before {
+						margin: 0;
+					}
+				}
+			}
+
+			&.alt {
+				position: absolute;
 			}
 		}
 
 		@include breakpoint(small) {
-			height: 2.75em;
-			line-height: 2.75em;
-			padding: 0 0 0 0.75em;
+			height: 3em;
+			line-height: 3.125em;
 
-			nav {
-				ul {
-					li {
-						a {
-							padding: 0 0.75em 0 0.75em;
+			> h1 {
+				margin-left: 1em;
 
-							&[href="#menu"] {
-								padding-right: 2.5em;
+				a {
+					font-size: 0.8em;
+				}
+			}
 
-								&:before {
-									right: 1em;
-								}
-							}
-						}
-					}
+			a {
+				&[href="#nav"] {
+					padding: 0 1em !important;
 				}
 			}
 		}
 
 		@include breakpoint(xsmall) {
-			.logo {
-				span {
-					display: none;
-				}
-			}
-
-			nav {
-				ul {
-					li {
-						a {
-							&[href="#menu"] {
-								&:only-child {
-									width: 6em;
-									text-indent: 6em;
-									white-space: nowrap;
-								}
-							}
-						}
-					}
-				}
-			}
+			min-width: 320px;
 		}
 	}
