--- a/assets/sass/components/_table.scss
+++ b/assets/sass/components/_table.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Optics by Pixelarity
+/// Formula by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -21,8 +17,7 @@
 
 		tbody {
 			tr {
-				border-style: solid;
-				border-width: _size(border-width);
+				border: solid _size(border-width);
 				border-left: 0;
 				border-right: 0;
 			}
@@ -40,13 +35,11 @@
 		}
 
 		thead {
-			border-bottom-style: solid;
-			border-bottom-width: (_size(border-width) * 2);
+			border-bottom: solid (_size(border-width) * 2);
 		}
 
 		tfoot {
-			border-top-style: solid;
-			border-top-width: (_size(border-width) * 2);
+			border-top: solid (_size(border-width) * 2);
 		}
 
 		&.alt {
@@ -55,8 +48,7 @@
 			tbody {
 				tr {
 					td {
-						border-style: solid;
-						border-width: _size(border-width);
+						border: solid _size(border-width);
 						border-left-width: 0;
 						border-top-width: 0;
 
@@ -85,7 +77,6 @@
 
 	@mixin color-table($p: null) {
 		table {
-
 			tbody {
 				tr {
 					border-color: _palette($p, border);
@@ -109,7 +100,6 @@
 			}
 
 			&.alt {
-
 				tbody {
 					tr {
 						td {
