--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,21 +1,8 @@
 /*
-	Optics by Pixelarity
+	Formula by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
-
-/* Basic */
-
-	object {
-		display: none;
-	}
-
-/* List */
-
-	ul.icons.major > li > .icon {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
 
 /* Button */
 
@@ -24,28 +11,19 @@
 	input[type="button"],
 	button,
 	.button {
-		border: solid 2px;
+		border: solid 2px #eaeaea;
 	}
+
+		input[type="submit"].special,
+		input[type="reset"].special,
+		input[type="button"].special,
+		button.special,
+		.button.special {
+			border: 0;
+		}
 
 /* Banner */
 
-	#banner {
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	#banner:before {
+		display: none;
 	}
-
-/* Main */
-
-	#main > header {
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-	}
-
-/* Nav */
-
-	#nav > ul.links > li {
-		border-top: solid 1px;
-		line-height: 3.5em;
-	}
-
-		#nav > ul.links > li:first-child {
-			border-top: 0;
-		}
