--- a/assets/sass/components/_box.scss
+++ b/assets/sass/components/_box.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Optics by Pixelarity
+/// Formula by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -12,7 +8,7 @@
 
 	.box {
 		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
+		border: solid _size(border-width);
 		margin-bottom: _size(element-margin);
 		padding: 1.5em;
 
@@ -28,3 +24,11 @@
 			padding: 0;
 		}
 	}
+
+	@mixin color-box($p: null) {
+ 		.box {
+ 			border-color: _palette($p, border);
+ 		}
+	}
+
+	@include color-box;
