--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Optics by Pixelarity
+/// Formula by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -32,13 +28,13 @@
 
 		&.left {
 			float: left;
-			padding: 0 1.5em 1em 0;
+			margin: 0 1.5em 1em 0;
 			top: 0.25em;
 		}
 
 		&.right {
 			float: right;
-			padding: 0 0 1em 1.5em;
+			margin: 0 0 1em 1.5em;
 			top: 0.25em;
 		}
 
@@ -59,6 +55,10 @@
 
 			img {
 				width: 100%;
+			}
+
+			@include breakpoint(small) {
+				margin: 0 0 _size(element-margin) 0;
 			}
 		}
 	}
