--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,9 +1,5 @@
-@import '../libs/vars';
-@import '../libs/functions';
-@import '../libs/mixins';
-
 ///
-/// Optics by Pixelarity
+/// Formula by Pixelarity
 /// pixelarity.com | hello@pixelarity.com
 /// License: pixelarity.com/license
 ///
@@ -11,40 +7,29 @@
 /* Footer */
 
 	#footer {
-		@include color-typography(accent3);
-		padding: 4em 0;
+		$main-pad: _size(main-pad);
+
+		@include padding($main-pad, 0);
+		background-color: _palette(bg-alt);
+		text-align: center;
+
+		> .inner {
+			margin: 0 auto;
+			max-width: calc(100% - 4em);
+			width: _size(inner-width);
+		}
 
 		.copyright {
-			color: _palette(accent3, fg-light);
-			margin: 0 0 _size(element-margin) 0;
-			padding: 0;
-			text-align: center;
-
-			li {
-				border-left: solid _size(border-width) _palette(accent3, border);
-				display: inline-block;
-				list-style: none;
-				margin-left: 1.5em;
-				padding-left: 1.5em;
-
-				&:first-child {
-					border-left: 0;
-					margin-left: 0;
-					padding-left: 0;
-				}
-			}
+			color: _palette(fg-light);
+			font-size: 0.8em;
 		}
 
 		@include breakpoint(small) {
-			@include padding(3em, 0);
+			$main-pad: _size(main-pad) * 0.75;
 
-			.copyright {
-				li {
-					display: block;
-					border-left: 0;
-					margin-left: 0;
-					padding-left: 0;
-				}
-			}
+			@include padding($main-pad, 0);
+		}
+
+		@include breakpoint(xsmall) {
 		}
 	}
