--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,104 +1,116 @@
 // Misc.
 	$misc: (
-		z-index-base:		10000
+		z-index-base:		10000,
+		max-features:		12
 	);
 
 // Duration.
 	$duration: (
-		nav:				0.5s,
-		transition:			0.2s
+		menu:				0.5s,
+		transition:			0.2s,
+		features:			1s,
+		spotlight:			1s,
+		banner:				1s
 	);
 
 // Size.
 	$size: (
-		border-radius:		0,
+		border-radius:		4px,
 		border-width:		1px,
 		element-height:		2.75em,
 		element-margin:		2em,
-		nav:				20em
+		main-pad:			5em,
+		inner-width:		60em
 	);
 
 // Font.
 	$font: (
-		family:				('Lato', Arial, Helvetica, sans-serif),
-		family-header: 		('Josefin Sans', Arial, Helvetica, sans-serif),
+		family:				('Roboto', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
-		letter-spacing:     0.1em,
+		family-heading:		('Oswald', sans-serif),
+		kerning:			0.25em,
+		kerning-heading:	0.15em,
 		weight:				300,
-		weight-bold:		400,
-		weight-extra-bold:	600
+		weight-heading:		400,
+		weight-bold:		500
 	);
 
 // Palette.
 	$palette: (
-		bg-alt:				#333,
-		bg:					#fff,
-		fg:					#777,
-		fg-bold:			#555,
-		fg-light:			#bbb,
-		highlight:			#a4c2ef,
-		border:				rgba(144,144,144,0.25),
+		bg:					#ffffff,
+		bg-alt:				#f7f7f7,
+		fg:					#8e8e8e,
+		fg-bold:			#777777,
+		fg-light:			#aaaaaa,
+		border:				#eaeaea,
 		border-bg:			rgba(144,144,144,0.075),
-		border2:			rgba(144,144,144,0.5),
+		border2:			#eaeaea,
 		border2-bg:			rgba(144,144,144,0.2),
+		highlight:			accent1,
+
+		invert: (
+			bg:				#333333,
+			fg:				rgba(255,255,255,0.75),
+			fg-bold:		#ffffff,
+			fg-light:		rgba(255,255,255,0.5),
+			border:			#ffffff,
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		#ffffff,
+			border2-bg:		rgba(255,255,255,0.2),
+			highlight:		invert
+		),
 
 		accent1: (
-			bg:				#a4c2ef,
-			fg:				mix(#a4c2ef, #ffffff, 25%),
+			bg:				#7bd2ed,
+			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#a4c2ef, #ffffff, 40%),
-			highlight:		darken(#a4c2ef, 30),
-			border:			#fff,
+			fg-light:		rgba(255,255,255,0.5),
+			border:			#ffffff,
 			border-bg:		rgba(255,255,255,0.075),
-			border2:		#fff,
-			border2-bg:		rgba(255,255,255,0.2)
+			border2:		#ffffff,
+			border2-bg:		rgba(255,255,255,0.2),
+			highlight:		accent1
 		),
 
 		accent2: (
-			bg:				#4a4c4f,
-			fg:				mix(#4a4c4f, #ffffff, 25%),
+			bg:				#8dbbee,
+			fg:				rgba(255,255,255,0.75),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#4a4c4f, #ffffff, 40%),
-			highlight:		#ffffff,
-			border:			rgba(255,255,255,0.15),
+			fg-light:		rgba(255,255,255,0.5),
+			border:			#ffffff,
 			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(255,255,255,0.5),
-			border2-bg:		rgba(255,255,255,0.2)
+			border2:		#ffffff,
+			border2-bg:		rgba(255,255,255,0.2),
+			highlight:		accent1
 		),
 
 		accent3: (
-			bg:				#eeefef,
-			fg:				#777,
-			fg-bold:		#555,
-			fg-light:		#bbb,
-			highlight:		#222,
-			border:			rgba(144,144,144,0.25),
-			border-bg:		rgba(144,144,144,0.075),
-			border2:		rgba(144,144,144,0.5),
-			border2-bg:		rgba(144,144,144,0.2),
+			bg:				#a7b7f1,
+			fg:				rgba(255,255,255,0.75),
+			fg-bold:		#ffffff,
+			fg-light:		rgba(255,255,255,0.5),
+			border:			#ffffff,
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		#ffffff,
+			border2-bg:		rgba(255,255,255,0.2),
+			highlight:		accent1
 		),
 
 		accent4: (
-			bg:				#333a45,
-			fg:				#95accf,
-			fg-bold:		#95accf,
-			fg-light:		#95accf,
-			highlight:		lighten(#95accf, 15),
-			border:			#95accf,
+			bg:				#c6b6f2,
+			fg:				rgba(255,255,255,0.75),
+			fg-bold:		#ffffff,
+			fg-light:		rgba(255,255,255,0.5),
+			border:			#ffffff,
 			border-bg:		rgba(255,255,255,0.075),
-			border2:		#95accf,
-			border2-bg:		rgba(255,255,255,0.2)
+			border2:		#ffffff,
+			border2-bg:		rgba(255,255,255,0.2),
+			highlight:		accent1
 		),
 
-		accent5: (
-			bg:				#92b3e4,
-			fg:				mix(#92b3e4, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#92b3e4, #ffffff, 40%),
-			highlight:		#ffffff,
-			border:			#fff,
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		#fff,
-			border2-bg:		rgba(255,255,255,0.2)
-		)
+		twitter: 			#8cd4e9,
+		facebook: 			#8cbae9,
+		youtube: 			#e98ca4,
+		instagram: 			#83bbde
+
 	);
